--- a/homepage.html
+++ b/homepage.html
@@ -33,5 +33,19 @@
         });
       </script>
     </div>
+    <nav class="navigation1 container">
+      <div class="nav-brand">Rohit |</div>
+      <ul reversed class="non-bullet-list">
+        <li class="list-inline list">
+          <a class="link" href="/blogs.html">blogs</a>
+        </li>
+        <li class="list-inline list">
+          <a class="link" href="/projects.html">projects</a>
+        </li>
+        <li class="list-inline list">
+          <a class="link link-active" href="/index.html">home</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
