--- a/homepage.html
+++ b/homepage.html
@@ -4,48 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rohit | Home</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div
-      id="vanta"
-      style="height: 100vh"
-      class="bg-animation"
-      style="position: relative"
-    >
-      <script class="bg">
-        VANTA.GLOBE({
-          el: "#vanta",
-          mouseControls: true,
-          touchControls: true,
-          gyroControls: false,
-          minHeight: 200.0,
-          minWidth: 200.0,
-          scale: 1.0,
-          scaleMobile: 1.0,
-          color: 0xe3d4d4,
-          color2: 0xcabfbf,
-          backgroundColor: 0xfdf8f3,
-          size: 1,
-        });
-      </script>
+    <div id="vanta" style="height: 100vh">
+      <div>
+        <nav>
+          <div>
+            <span>
+              <h1 class="nav-name">ROHIT &nbsp;&nbsp;|</h1>
+            </span>
+
+            <ul class="ul">
+              <li class="nav-list">
+                <a class="nav-link" href="homepage.html">home</a>
+              </li>
+              <li class="nav-list">
+                <a class="nav-link" href="projects.html">projects</a>
+              </li>
+
+              <li class="nav-list">
+                <a class="nav-link" href="blogs.html">blogs</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
-    <nav class="navigation1 container">
-      <div class="nav-brand">Rohit |</div>
-      <ul reversed class="non-bullet-list">
-        <li class="list-inline list">
-          <a class="link" href="/blogs.html">blogs</a>
-        </li>
-        <li class="list-inline list">
-          <a class="link" href="/projects.html">projects</a>
-        </li>
-        <li class="list-inline list">
-          <a class="link link-active" href="/index.html">home</a>
-        </li>
-      </ul>
-    </nav>
+
+    <script src="app.js"></script>
   </body>
 </html>
