update nav and bg

--- a/homepage.html
+++ b/homepage.html
@@ -4,37 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rohit | Home</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
-    <link rel="stylesheet" href="/styles.css" />
+    <title>rohit</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="vanta" style="height: 100vh">
-      <div>
-        <nav>
-          <div>
-            <span>
-              <h1 class="nav-name">ROHIT &nbsp;&nbsp;|</h1>
-            </span>
-
-            <ul class="ul">
-              <li class="nav-list">
-                <a class="nav-link" href="homepage.html">home</a>
-              </li>
-              <li class="nav-list">
-                <a class="nav-link" href="projects.html">projects</a>
-              </li>
-
-              <li class="nav-list">
-                <a class="nav-link" href="blogs.html">blogs</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <nav class="nav-home">
+      <div class="logo">
+        <h4>rohit |</h4>
       </div>
-    </div>
-
-    <script src="app.js"></script>
+      <ul class="nav-links">
+        <li class="active-link"><a href="homepage.html">home</a></li>
+        <li><a href="projects.html">projects</a></li>
+        <li><a href="blogs.html">blogs</a></li>
+      </ul>
+    </nav>
+    <div class="img-bg"></div>
   </body>
 </html>
