--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <nav class="nav-proj">
+      <div class="logo">
+        <h4>rohit |</h4>
+      </div>
+      <ul class="nav-links">
+        <li><a href="homepage.html">home</a></li>
+        <li><a class="active-link" href="projects.html">projects</a></li>
+        <li><a href="blogs.html">blogs</a></li>
+      </ul>
+    </nav>
+
     <div
       id="vanta"
       style="height: 100vh"
@@ -33,5 +44,6 @@
         });
       </script>
     </div>
+    <h1>Projects</h1>
   </body>
 </html>
