--- a/blogs.html
+++ b/blogs.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <nav class="nav-blogs">
+      <div class="logo">
+        <h4>rohit |</h4>
+      </div>
+      <ul class="nav-links">
+        <li><a href="homepage.html">home</a></li>
+        <li><a href="projects.html">projects</a></li>
+        <li><a class="active-link" href="blogs.html">blogs</a></li>
+      </ul>
+    </nav>
     <div
       id="vanta"
       style="height: 100vh"
