--- a/blogs.html
+++ b/blogs.html
@@ -10,38 +10,149 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <nav class="nav-blogs">
-      <div class="logo">
-        <h4>rohit |</h4>
+    <div id="vanta" style="height: 100vh" style="position: relative">
+      <nav class="nav-blogs">
+        <div class="logo">
+          <h4>rohit |</h4>
+        </div>
+        <ul class="nav-links">
+          <li><a href="homepage.html">home</a></li>
+          <li><a href="projects.html">projects</a></li>
+          <li><a href="blogs.html">blogs</a></li>
+        </ul>
+      </nav>
+      <h1
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding-top: 2vh;
+          font-family: sans-serif;
+          letter-spacing: 1px;
+        "
+      >
+        My Blogs
+      </h1>
+
+      <div style="padding-top: 4rem; padding-left: 10%; width: 90vw">
+        <span>
+          <h1 style="letter-spacing: 2px">What is HTML ?</h1>
+          <br />
+          <hr style="border: 1px solid black; color: black" />
+          <p
+            style="
+              padding-top: 2vh;
+
+              font-size: 19px;
+              letter-spacing: 2px;
+            "
+          >
+            HTML is standard markup language for creating web pages HTML stands
+            for Hyper Text Markup language HTML describes the structure of web
+            pages ....
+          </p>
+          <br />
+          <a
+            style="
+              text-decoration: none;
+              color: black;
+              font-size: large;
+              border: 1px solid black;
+              padding: 5px 15px;
+              border-radius: 8px;
+              border-bottom: 4px solid black;
+              border-left: 5px solid black;
+              border-right: 2px solid black;
+            "
+            href="https://medium.com/@rohitthorat680/what-actually-html-is-9f7b100cd271"
+          >
+            Read Blog
+          </a>
+        </span>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <span>
+          <h1 style="letter-spacing: 2px">What is CSS ?</h1>
+          <br />
+          <hr style="border: 1px solid black; color: black" />
+          <p
+            style="
+              padding-top: 2vh;
+
+              font-size: 19px;
+              letter-spacing: 2px;
+            "
+          >
+            CSS stands for Cascading Style Sheets • CSS describes how HTML
+            elements are to be displayed on screen, paper, or in other media all
+            at once • CSS saves a lot of work. It can control the layout of
+            multiple web pages....
+          </p>
+          <br />
+          <a
+            style="
+              text-decoration: none;
+              color: black;
+              font-size: large;
+              border: 1px solid black;
+              padding: 5px 15px;
+              border-radius: 8px;
+              border-bottom: 4px solid black;
+              border-left: 5px solid black;
+              border-right: 2px solid black;
+            "
+            href="https://medium.com/@rohitthorat680/what-is-css-5c0ca94d3e08"
+          >
+            Read Blog
+          </a>
+        </span>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <span>
+          <h1 style="letter-spacing: 2px">What is Git ?</h1>
+          <br />
+          <hr style="border: 1px solid black; color: black" />
+          <p
+            style="
+              padding-top: 2vh;
+
+              font-size: 19px;
+              letter-spacing: 2px;
+            "
+          >
+            Git is a version control system used for tracking changes in
+            computer files. It is generally used for source code management in
+            software development....
+          </p>
+          <br />
+          <a
+            style="
+              text-decoration: none;
+              color: black;
+              font-size: large;
+              border: 1px solid black;
+              padding: 5px 15px;
+              border-radius: 8px;
+              border-bottom: 4px solid black;
+              border-left: 5px solid black;
+              border-right: 2px solid black;
+            "
+            href="https://rohit-what-is-git.netlify.app/"
+          >
+            Read Blog
+          </a>
+        </span>
       </div>
-      <ul class="nav-links">
-        <li><a href="homepage.html">home</a></li>
-        <li><a href="projects.html">projects</a></li>
-        <li><a class="active-link" href="blogs.html">blogs</a></li>
-      </ul>
-    </nav>
-    <div
-      id="vanta"
-      style="height: 100vh"
-      class="bg-animation"
-      style="position: relative"
-    >
-      <script>
-        VANTA.GLOBE({
-          el: "#vanta",
-          mouseControls: true,
-          touchControls: true,
-          gyroControls: false,
-          minHeight: 200.0,
-          minWidth: 200.0,
-          scale: 1.0,
-          scaleMobile: 1.0,
-          color: 0xe3d4d4,
-          color2: 0xcabfbf,
-          backgroundColor: 0xfdf8f3,
-          size: 1,
-        });
-      </script>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
