--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
         <h4>rohit |</h4>
       </div>
       <ul class="nav-links">
-        <li class="active-link"><a href="homepage.html">home</a></li>
+        <li><a href="homepage.html">home</a></li>
         <li><a href="projects.html">projects</a></li>
         <li><a href="blogs.html">blogs</a></li>
       </ul>
