--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div id="vanta" style="height: 100vh" style="position: relative">
+    <div id="vanta" style="height: 100vh" style="position: cover; height: 100%">
       <nav class="nav-blogs">
         <div class="logo">
           <h4>rohit |</h4>
