--- a/homepage.html
+++ b/homepage.html
@@ -4,20 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rohit</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Rohit | Projects</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <nav class="nav-home">
-      <div class="logo">
-        <h4>rohit |</h4>
-      </div>
-      <ul class="nav-links">
-        <li><a href="homepage.html">home</a></li>
-        <li><a href="projects.html">projects</a></li>
-        <li><a href="blogs.html">blogs</a></li>
-      </ul>
-    </nav>
-    <div class="img-bg"></div>
+    <div id="vanta" style="height: 100vh" style="position: relative">
+      <nav class="nav-home">
+        <div class="logo">
+          <h4>rohit |</h4>
+        </div>
+        <ul class="nav-links">
+          <li><a href="homepage.html">home</a></li>
+          <li><a href="projects.html">projects</a></li>
+          <li><a href="blogs.html">blogs</a></li>
+        </ul>
+      </nav>
+      <h1
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding-top: 2vh;
+          font-family: sans-serif;
+          letter-spacing: 2px;
+        "
+      >
+        My Homepage
+      </h1>
+    </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
