--- a/projects.html
+++ b/projects.html
@@ -28,11 +28,125 @@
           align-items: center;
           padding-top: 2vh;
           font-family: sans-serif;
-          letter-spacing: 2px;
+          letter-spacing: 1px;
         "
       >
-        My Projects
+        My Blogs
       </h1>
+
+      <div style="padding-top: 4rem; padding-left: 10%; width: 90vw">
+        <span>
+          <h1 style="letter-spacing: 2px">Talk Banana</h1>
+          <br />
+          <hr style="border: 1px solid black; color: black" />
+          <p
+            style="
+              padding-top: 2vh;
+
+              font-size: 19px;
+              letter-spacing: 2px;
+            "
+          >
+            Minionese, or often reffered as Minion language or Banana language,
+            is a constructed language used by the Miniones
+          </p>
+          <br />
+          <a
+            style="
+              text-decoration: none;
+              color: black;
+              font-size: large;
+              border: 1px solid black;
+              padding: 5px 15px;
+              border-radius: 8px;
+              border-bottom: 4px solid black;
+              border-left: 5px solid black;
+              border-right: 2px solid black;
+            "
+            href="https://rohit-talk-banana.netlify.app/"
+          >
+            Live Project
+          </a>
+        </span>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <span>
+          <h1 style="letter-spacing: 2px">Talk Yoda</h1>
+          <br />
+          <hr style="border: 1px solid black; color: black" />
+          <p
+            style="
+              padding-top: 2vh;
+
+              font-size: 19px;
+              letter-spacing: 2px;
+            "
+          >
+            Yoda is a fictional character in the Star Wars universe. They have
+            their own language named Yodish. These CLI app translate English
+            into Yodish.
+          </p>
+          <br />
+          <a
+            style="
+              text-decoration: none;
+              color: black;
+              font-size: large;
+              border: 1px solid black;
+              padding: 5px 15px;
+              border-radius: 8px;
+              border-bottom: 4px solid black;
+              border-left: 5px solid black;
+              border-right: 2px solid black;
+            "
+            href="https://rohit-yoda-talk.netlify.app/"
+          >
+            Live Project
+          </a>
+        </span>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <span>
+          <h1 style="letter-spacing: 2px">Do You Know me Better ?</h1>
+          <br />
+          <hr style="border: 1px solid black; color: black" />
+          <p
+            style="
+              padding-top: 2vh;
+
+              font-size: 19px;
+              letter-spacing: 2px;
+            "
+          >
+            This is a quiz about myself
+          </p>
+          <br />
+          <a
+            style="
+              text-decoration: none;
+              color: black;
+              font-size: large;
+              border: 1px solid black;
+              padding: 5px 15px;
+              border-radius: 8px;
+              border-bottom: 4px solid black;
+              border-left: 5px solid black;
+              border-right: 2px solid black;
+            "
+            href="https://replit.com/@RohitThorat2/quiz#index.js?embed1output1"
+          >
+            Live Project
+          </a>
+        </span>
+      </div>
     </div>
 
     <script src="app.js"></script>
