added new project

--- a/projects.html
+++ b/projects.html
@@ -11,141 +11,181 @@
   </head>
   <body>
     <div id="vanta" style="height: 100vh" style="position: relative">
-      <nav class="nav-proj">
-        <div class="logo">
-          <h4>rohit |</h4>
+      <div style="padding: 1rem">
+        <nav class="nav-proj">
+          <div class="logo">
+            <h4>rohit |</h4>
+          </div>
+          <ul class="nav-links">
+            <li><a href="homepage.html">home</a></li>
+            <li><a href="projects.html">projects</a></li>
+            <li><a href="blogs.html">blogs</a></li>
+          </ul>
+        </nav>
+        <h1
+          style="
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 2vh;
+            font-family: sans-serif;
+            letter-spacing: 1px;
+          "
+        >
+          My Projects
+        </h1>
+
+        <div style="padding-top: 4rem; padding-left: 10%; width: 90vw">
+          <span>
+            <h1 style="letter-spacing: 2px">Talk Banana 🗣</h1>
+            <br />
+            <hr style="border: 1px solid black; color: black" />
+            <p
+              style="
+                padding-top: 2vh;
+
+                font-size: 19px;
+                letter-spacing: 2px;
+              "
+            >
+              Minionese, or often reffered as Minion language or Banana
+              language, is a constructed language used by the Miniones
+            </p>
+            <br />
+            <a
+              style="
+                text-decoration: none;
+                color: black;
+                font-size: large;
+                border: 1px solid black;
+                padding: 5px 15px;
+                border-radius: 8px;
+                border-bottom: 4px solid black;
+                border-left: 5px solid black;
+                border-right: 2px solid black;
+              "
+              href="https://rohit-talk-banana.netlify.app/"
+            >
+              Live Project
+            </a>
+          </span>
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <span>
+            <h1 style="letter-spacing: 2px">Talk Yoda 🗣</h1>
+            <br />
+            <hr style="border: 1px solid black; color: black" />
+            <p
+              style="
+                padding-top: 2vh;
+
+                font-size: 19px;
+                letter-spacing: 2px;
+              "
+            >
+              Yoda is a fictional character in the Star Wars universe. They have
+              their own language named Yodish. These CLI app translate English
+              into Yodish.
+            </p>
+            <br />
+            <a
+              style="
+                text-decoration: none;
+                color: black;
+                font-size: large;
+                border: 1px solid black;
+                padding: 5px 15px;
+                border-radius: 8px;
+                border-bottom: 4px solid black;
+                border-left: 5px solid black;
+                border-right: 2px solid black;
+              "
+              href="https://rohit-yoda-talk.netlify.app/"
+            >
+              Live Project
+            </a>
+          </span>
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <span>
+            <h1 style="letter-spacing: 2px">Emoji Interpriter 😃</h1>
+            <br />
+            <hr style="border: 1px solid black; color: black" />
+            <p
+              style="
+                padding-top: 2vh;
+
+                font-size: 19px;
+                letter-spacing: 2px;
+              "
+            >
+              This is a CLI app that knows you the meaning of Emoji's 😃
+            </p>
+            <br />
+            <a
+              style="
+                text-decoration: none;
+                color: black;
+                font-size: large;
+                border: 1px solid black;
+                padding: 5px 15px;
+                border-radius: 8px;
+                border-bottom: 4px solid black;
+                border-left: 5px solid black;
+                border-right: 2px solid black;
+              "
+              href="https://lp5692.csb.app/"
+            >
+              Live Project
+            </a>
+          </span>
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <span>
+            <h1 style="letter-spacing: 2px">Do You Know me Better 🤨🤧 ?</h1>
+            <br />
+            <hr style="border: 1px solid black; color: black" />
+            <p
+              style="
+                padding-top: 2vh;
+
+                font-size: 19px;
+                letter-spacing: 2px;
+              "
+            >
+              This is a quiz about myself
+            </p>
+            <br />
+            <a
+              style="
+                text-decoration: none;
+                color: black;
+                font-size: large;
+                border: 1px solid black;
+                padding: 5px 15px;
+                border-radius: 8px;
+                border-bottom: 4px solid black;
+                border-left: 5px solid black;
+                border-right: 2px solid black;
+              "
+              href="https://replit.com/@RohitThorat2/quiz#index.js?embed1output1"
+            >
+              Live Project
+            </a>
+          </span>
         </div>
-        <ul class="nav-links">
-          <li><a href="homepage.html">home</a></li>
-          <li><a href="projects.html">projects</a></li>
-          <li><a href="blogs.html">blogs</a></li>
-        </ul>
-      </nav>
-      <h1
-        style="
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding-top: 2vh;
-          font-family: sans-serif;
-          letter-spacing: 1px;
-        "
-      >
-        My Blogs
-      </h1>
-
-      <div style="padding-top: 4rem; padding-left: 10%; width: 90vw">
-        <span>
-          <h1 style="letter-spacing: 2px">Talk Banana</h1>
-          <br />
-          <hr style="border: 1px solid black; color: black" />
-          <p
-            style="
-              padding-top: 2vh;
-
-              font-size: 19px;
-              letter-spacing: 2px;
-            "
-          >
-            Minionese, or often reffered as Minion language or Banana language,
-            is a constructed language used by the Miniones
-          </p>
-          <br />
-          <a
-            style="
-              text-decoration: none;
-              color: black;
-              font-size: large;
-              border: 1px solid black;
-              padding: 5px 15px;
-              border-radius: 8px;
-              border-bottom: 4px solid black;
-              border-left: 5px solid black;
-              border-right: 2px solid black;
-            "
-            href="https://rohit-talk-banana.netlify.app/"
-          >
-            Live Project
-          </a>
-        </span>
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <span>
-          <h1 style="letter-spacing: 2px">Talk Yoda</h1>
-          <br />
-          <hr style="border: 1px solid black; color: black" />
-          <p
-            style="
-              padding-top: 2vh;
-
-              font-size: 19px;
-              letter-spacing: 2px;
-            "
-          >
-            Yoda is a fictional character in the Star Wars universe. They have
-            their own language named Yodish. These CLI app translate English
-            into Yodish.
-          </p>
-          <br />
-          <a
-            style="
-              text-decoration: none;
-              color: black;
-              font-size: large;
-              border: 1px solid black;
-              padding: 5px 15px;
-              border-radius: 8px;
-              border-bottom: 4px solid black;
-              border-left: 5px solid black;
-              border-right: 2px solid black;
-            "
-            href="https://rohit-yoda-talk.netlify.app/"
-          >
-            Live Project
-          </a>
-        </span>
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <span>
-          <h1 style="letter-spacing: 2px">Do You Know me Better ?</h1>
-          <br />
-          <hr style="border: 1px solid black; color: black" />
-          <p
-            style="
-              padding-top: 2vh;
-
-              font-size: 19px;
-              letter-spacing: 2px;
-            "
-          >
-            This is a quiz about myself
-          </p>
-          <br />
-          <a
-            style="
-              text-decoration: none;
-              color: black;
-              font-size: large;
-              border: 1px solid black;
-              padding: 5px 15px;
-              border-radius: 8px;
-              border-bottom: 4px solid black;
-              border-left: 5px solid black;
-              border-right: 2px solid black;
-            "
-            href="https://replit.com/@RohitThorat2/quiz#index.js?embed1output1"
-          >
-            Live Project
-          </a>
-        </span>
       </div>
     </div>
 
