--- a/projects.html
+++ b/projects.html
@@ -17,9 +17,9 @@
             <h4>rohit |</h4>
           </div>
           <ul class="nav-links">
-            <li><a href="homepage.html">home</a></li>
-            <li><a href="projects.html">projects</a></li>
-            <li><a href="blogs.html">blogs</a></li>
+            <li><a href="homepage.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="blogs.html">Blogs</a></li>
           </ul>
         </nav>
         <br />
