--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
           <h4>rohit |</h4>
         </div>
         <ul class="nav-links">
-          <li><a href="homepage.html">home</a></li>
+          <li><a href="index.html">home</a></li>
           <li><a href="projects.html">projects</a></li>
           <li><a href="blogs.html">blogs</a></li>
         </ul>
