--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
             <h4>rohit |</h4>
           </div>
           <ul class="nav-links">
-            <li><a href="homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="blogs.html">Blogs</a></li>
           </ul>
