updated project link

--- a/projects.html
+++ b/projects.html
@@ -176,7 +176,7 @@
                 border-left: 5px solid black;
                 border-right: 2px solid black;
               "
-              href="https://lp5692.csb.app/"
+              href="https://lj4hs8.csb.app/"
             >
               Live Project
             </a>
