--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,7 @@
             </p>
             <br />
             <a
+            target="_blank"
               style="
                 text-decoration: none;
                 color: black;
@@ -123,6 +124,7 @@
             </p>
             <br />
             <a
+            target="_blank"
               style="
                 text-decoration: none;
                 color: black;
@@ -165,6 +167,7 @@
             </p>
             <br />
             <a
+            target="_blank"
               style="
                 text-decoration: none;
                 color: black;
@@ -206,6 +209,7 @@
             </p>
             <br />
             <a
+            target="_blank"
               style="
                 text-decoration: none;
                 color: black;
