--- a/blogs.html
+++ b/blogs.html
@@ -9,32 +9,36 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
     <link rel="stylesheet" href="/styles.css" />
     <style>
-      .div-contents{
-        position: ;
-      }
+      
     </style>
   </head>
   <body>
     <div id="vanta" style="height: 100vh" style="position: cover; height: 100%">
-      <nav class="nav-blogs">
-        <div class="logo">
-          <h4>rohit |</h4>
-        </div>
-        <ul class="nav-links">
-          <li><a href="index.html">home</a></li>
-          <li><a href="projects.html">projects</a></li>
-          <li><a href="blogs.html">blogs</a></li>
-        </ul>
-      </nav>
-      <div class="div-contents">
+      <div style="z-index: 1000;">
+
+        <nav class="nav" >
+          <div class="logo">
+            <h4>rohit |</h4>
+          </div>
+          <ul class="nav-links">
+            <li><a href="index.html">home</a></li>
+            <li><a href="projects.html">projects</a></li>
+            <li><a href="blogs.html">blogs</a></li>
+          </ul>
+        </nav>
+
+      </div>
+      
+      <div class="overlay" style="margin-top: .5rem;">
         <h1
           style="
             display: flex;
             justify-content: center;
             align-items: center;
-            padding-top: 2vh;
+            padding-top: 15vh;
             font-family: sans-serif;
             letter-spacing: 1px;
+            color: red;
           "
         >
           My Blogs
@@ -156,6 +160,104 @@
               Read Blog
             </a>
           </span>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nisi
+        labore maxime, doloremque itaque sit, numquam animi corporis dolor,
+        laudantium architecto eum ad ut voluptatem magni minima optio. Eum in
+        repellendus, quidem libero illo dignissimos error aspernatur illum, cum
+        amet cumque corporis perferendis voluptatibus laboriosam nemo provident!
+        Fugit dolore dicta optio? Iusto quae aliquam minus repudiandae vero
+        perferendis accusantium, sunt nihil labore quisquam provident officiis
+        distinctio tempore architecto deleniti nostrum ad placeat tempora alias
+        at illo minima enim iste quas. Corrupti accusamus sint, perferendis
+        debitis quisquam placeat dolore corporis, fugit minus explicabo pariatur
+        ipsam ducimus! Ipsum nisi porro expedita id deserunt, similique
+        delectus, dignissimos hic fuga vitae odio tempora et. Fugit accusantium
+        iste iusto quaerat, libero unde commodi recusandae nisi aliquam
+        nesciunt, numquam magnam doloribus neque, dignissimos consequuntur
+        aperiam soluta deleniti asperiores dolorum? Eveniet nulla cumque
+        recusandae debitis perferendis natus blanditiis culpa doloribus. Maxime
+        doloribus natus ducimus quod veritatis tempora rem ex, labore velit,
+        nam, provident sint consectetur laudantium error. Ad error iure qui
+        mollitia neque quia laborum necessitatibus! Consequuntur rerum
+        consectetur cum ducimus saepe praesentium necessitatibus inventore
+        harum, distinctio, hic quibusdam est recusandae voluptate aperiam ab
+        blanditiis eveniet quod modi velit aut ipsum veritatis esse totam?
+        Molestias dolore possimus asperiores? Eius aperiam enim reiciendis earum
+        delectus alias sequi deleniti? Nostrum vitae fugiat distinctio? Dolorum
+        corporis fugiat minus corrupti mollitia sint. Ipsa, necessitatibus
+        facere, quas magni earum obcaecati iste quos veniam porro tempora
+        cupiditate? Consequatur voluptas debitis sit velit praesentium, soluta
+        ut iusto totam pariatur libero odio vel quae earum, veniam amet
+        laudantium, delectus accusamus nulla sapiente? Aliquid iure, culpa ad
+        dolorem sed similique possimus animi iusto aut, nihil quam distinctio
+        quae? Minima facere optio maxime id nostrum, quas deleniti possimus
+        quaerat nesciunt rerum rem sint reprehenderit provident doloribus et
+        itaque sit, ratione similique natus. Voluptate ipsam placeat deleniti
+        doloremque adipisci quod facilis nesciunt reprehenderit amet neque
+        aspernatur repellat quis sed magnam blanditiis, et iure eos illo nobis
+        ab sapiente animi saepe quaerat odio! Iure vitae quidem, ducimus hic
+        adipisci, autem quisquam fugiat quos dignissimos voluptate architecto
+        optio tenetur blanditiis possimus accusamus corrupti iusto culpa? Fugit,
+        ab. Deserunt asperiores suscipit voluptate quae reiciendis ratione fuga
+        quam aliquam modi, fugit ea deleniti sapiente porro ad expedita rem non
+        maxime eius vel ipsum incidunt perspiciatis sequi. Eum perferendis autem
+        quisquam placeat dignissimos, quos veritatis sapiente, laboriosam sint
+        officia explicabo aliquam eius pariatur recusandae voluptatibus unde!
+        Sint nam architecto eveniet eos at quas quaerat, ipsa, nulla quisquam,
+        mollitia illo cumque harum quam aliquid incidunt reiciendis dolorum
+        totam? Quo accusantium rerum assumenda explicabo. Ipsam nemo rem dolorum
+        minima suscipit laborum dolore quod recusandae, ipsa natus! Fuga
+        deserunt veritatis non sit eius magnam quaerat excepturi neque
+        perferendis asperiores officiis quae molestias, eum voluptatum quasi rem
+        error itaque provident impedit! Quo quos at quam, perferendis, quisquam
+        atque, voluptates unde aperiam esse eligendi recusandae. Velit autem,
+        vel odio ullam dolorum adipisci illo temporibus eum sequi obcaecati aut
+        ratione amet deleniti sit, cum facilis eaque quo, similique at. Magnam,
+        hic enim vitae culpa sed tempora assumenda reiciendis, animi
+        consequuntur provident omnis ex recusandae eveniet quam ipsum pariatur
+        ea sunt, quae perferendis. Odio asperiores tempore quos sint explicabo
+        dolorem enim suscipit ex eos illum deserunt excepturi perferendis
+        doloremque consequuntur molestias harum, quo natus sequi vel molestiae
+        blanditiis iste. Dignissimos eius ducimus placeat qui tenetur adipisci
+        atque voluptatibus, molestiae, quod numquam asperiores voluptates minima
+        deleniti. Fuga quia natus pariatur odio a, veniam minus cum qui rerum
+        consequatur ratione libero magnam praesentium eveniet tenetur assumenda
+        vel in labore ea rem accusantium eum optio numquam sunt. Qui consectetur
+        minus velit, rem excepturi optio provident, ad facilis repellat
+        perspiciatis quo maxime animi explicabo ducimus cupiditate nostrum modi
+        temporibus? Possimus tempora praesentium a itaque, est fuga consequatur
+        minima facilis molestias explicabo assumenda sint doloribus voluptate
+        facere voluptatem beatae accusamus culpa iste! Quae est architecto
+        laboriosam quaerat aperiam aspernatur id repellat quisquam accusamus
+        obcaecati corporis voluptas, ipsa iste harum dolores culpa repudiandae
+        ipsum? Fuga numquam dolorum quam enim. Sit distinctio deleniti odit.
+        Voluptate mollitia similique voluptatum a debitis dolore maxime
+        doloribus rerum. Quibusdam, perspiciatis. Accusantium at blanditiis eum,
+        culpa delectus explicabo voluptas praesentium quis veritatis repellendus
+        eos nobis possimus incidunt ut iure voluptate nihil natus consectetur
+        est ipsum amet inventore. Reprehenderit perspiciatis itaque expedita
+        iusto blanditiis aspernatur, unde aliquid consequatur saepe, tenetur
+        dignissimos in modi explicabo fugit quisquam eos voluptates? Iusto
+        impedit odit excepturi soluta saepe natus vero asperiores ab, labore
+        nostrum dolor voluptatibus neque in non cum provident deserunt animi
+        voluptates maiores consequatur quam unde perspiciatis voluptate.
+        Dolorum, voluptates laboriosam? Illum tenetur quibusdam recusandae ad
+        vero facere maiores eaque pariatur dolorem nihil esse sequi distinctio
+        natus ipsam, deserunt, molestiae iusto, incidunt quos velit repellat.
+        Inventore aspernatur omnis quaerat totam ipsum ex quae? Cupiditate,
+        ducimus ipsa eum numquam molestiae ipsam nostrum eos autem molestias et
+        est ut dolorum ab quos ratione maxime iste suscipit nam impedit. Dolores
+        natus sapiente assumenda recusandae ad deleniti nam doloremque, unde
+        error! Nemo iste atque dolores blanditiis recusandae eos a, nulla
+        possimus ab illum autem qui nihil, minima modi mollitia, eligendi
+        placeat ex consequuntur officia aut eius fuga nostrum accusamus. Quasi
+        autem, ex eos impedit voluptates tempore et? Ad neque earum reiciendis
+        nostrum eos, debitis cupiditate soluta culpa numquam deleniti est
+        minima. Sint, eum laudantium aut aliquam explicabo quasi, neque magnam
+        sed qui dolorem vel recusandae fugit inventore veritatis in ipsa
+        aliquid. Possimus repellendus dolore ipsam incidunt harum voluptate
+        doloremque magni commodi id reprehenderit quasi reiciendis in aliquid
+        nihil tempore, placeat nesciunt enim au
         </div>
       </div>
     </div>
