--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <div id="vanta" style="height: 100vh" style="position: relative">
-      <nav class="nav-home">
+      <nav class="nav">
         <div class="logo">
           <h4>rohit |</h4>
         </div>
         <ul class="nav-links">
-          <li><a href="homepage.html">home</a></li>
+          <li><a href="index.html">home</a></li>
           <li><a href="projects.html">projects</a></li>
           <li><a href="blogs.html">blogs</a></li>
         </ul>
@@ -33,6 +33,11 @@
       >
         My Homepage
       </h1>
+      <h1>welckome</h1>
+
+      <script>
+        let user=prompt("Enter your name=");
+      </script>
     </div>
 
     <script src="app.js"></script>
